create layout html, css, find pictures

--- a/index.html
+++ b/index.html
@@ -2,9 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Shell Game</title>
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/script.js"></script>
 </head>
-<body>
-
+<body class="mainPage" id="mainPage">
+    <div class="wrapper">
+        <header>
+            <p>Shell Game</p>
+        </header>
+        <main class="mainBlock">
+            <div class="gameBlocks" id="gameBlocks">
+                <div class="gameBlock">
+                A
+                </div>
+                <div class="gameBlock">
+                    B
+                </div>
+                <div class="gameBlock">
+                    C
+                </div>
+                <div class="gameBlock">
+                    D
+                </div>
+                <div class="gameBlock">
+                    A
+                </div>
+                <div class="gameBlock">
+                    B
+                </div>
+                <div class="gameBlock">
+                    C
+                </div>
+                <div class="gameBlock">
+                    D
+                </div>
+                <div class="gameBlock">
+                    A
+                </div>
+                <div class="gameBlock">
+                    B
+                </div>
+                <div class="gameBlock">
+                    C
+                </div>
+                <div class="gameBlock">
+                    D
+                </div>
+                <div class="gameBlock">
+                    A
+                </div>
+                <div class="gameBlock">
+                    B
+                </div>
+                <div class="gameBlock">
+                    C
+                </div>
+                <div class="gameBlock">
+                    D
+                </div>
+            </div>
+        </main>
+        <footer>
+            <form>
+                <button class="resetGame" id="resetGame">
+                    Новая игра
+                </button>
+            </form>
+        </footer>
+    </div>
 </body>
 </html>
